--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: SpaceDevs Blog
 description: Conteúdo educativo, tutoriais e conversas sobre o universo da tecnologia
-baseurl: "/blog" # Subpath do seu site, ex: /blog
+baseurl: "" # Subpath do seu site, ex: /blog
 url: "/" # URL base do seu site
 email: oi@spacedevs.com.br
 
